--- a/asset/css/respond_shopee.css
+++ b/asset/css/respond_shopee.css
@@ -1251,6 +1251,7 @@
         grid-auto-flow: column;
         overflow-x: auto;
         scroll-snap-type : x mandatory;
+        scroll-behavior: smooth;
         scroll-snap-stop: always;
         -ms-overflow-style: none;
         scrollbar-width: none;  
